<resources>
    <string name="app_name">Mach 3</string>
    <string name="habitos">Hábitos</string>
    <string name="hoje">Hoje</string>
    <string name="manha">Manhã</string>
    <string name="tarde">Tarde</string>
    <string name="noite">Noite</string>
    <string name="criar">Criar</string>
    <string name="qualquer_hora">Qualquer hora</string>
    <string name="turno">Turno</string>
    <string name="dom">Dom</string>
    <string name="sab">Sab</string>
    <string name="sex">Sex</string>
    <string name="qui">Qui</string>
    <string name="qua">Qua</string>
    <string name="ter">Ter</string>
    <string name="seg">Seg</string>
    <string name="dias_da_semana">Dias da semana</string>
    <string name="categoria">Categoria</string>
    <string name="ex_exercicios">Ex: Fazer exercícios</string>
    <string name="nome">Nome</string>
    <string name="boa_noite">Boa noite</string>
    <string name="ficar_em_forma">Ficar em forma</string>
    <string name="lar_doce_lar">Lar doce lar</string>
    <string name="financas">Finanças</string>
    <string name="novo_habito">Novo hábito</string>
    <string name="corpo_e_mente"><![CDATA[Corpo & Mente]]></string>
    <string name="foco_e_mindset"><![CDATA[Foco & Mindset]]></string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="calendario">Calendário</string>
    <string name="config">Config</string>
    <string name="escreva_no_diario">Escreva no diário</string>
    <string name="organizar_emails">Organizar e-mails</string>
    <string name="pratique_visualizacoes">Pratique visualizações</string>
    <string name="refletir_sobre_o_dia">Refletir sobre o dia</string>
    <string name="ler_20_paginas">Ler 20 páginas</string>
    <string name="aprenda_algo_novo">Aprenda algo novo</string>
    <string name="habito">Habito</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="mach_3">Mach 3</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="deslogar">Deslogar</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="bem_estar">Bem estar</string>
    <string name="foco">Foco</string>
</resources>