<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    tools:context=".activities.CorpoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/borda_arredondada2"
        android:orientation="vertical"
        android:padding="20dp">

        <include
            android:id="@+id/toolbarCateg"
            layout="@layout/toolbar_categorias" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:text="@string/aprenda_algo_novo"
            android:textColor="@color/verde"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_black"
            app:icon="@drawable/ic_baseline_eco_24"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconSize="38dp"
            app:iconTint="@color/verde"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:text="@string/ler_20_paginas"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_black"
            app:icon="@drawable/ic_baseline_stories_24"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconSize="38dp"
            app:iconTint="@color/purple_200"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:text="@string/refletir_sobre_o_dia"
            android:textColor="@color/amarelo"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_black"
            app:icon="@drawable/ca_baseline_self_improvement_36"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconSize="38dp"
            app:iconTint="@color/amarelo"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:text="@string/pratique_visualizacoes"
            android:textColor="@color/blue_500"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_black"
            app:icon="@drawable/ic_baseline_diamond_24"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconSize="38dp"
            app:iconTint="@color/blue_500"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:text="@string/organizar_emails"
            android:textColor="@color/laranja"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_black"
            app:icon="@drawable/ic_baseline_email_read_24"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconSize="38dp"
            app:iconTint="@color/laranja"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            android:text="@string/escreva_no_diario"
            android:textColor="@color/rosa"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_black"
            app:icon="@drawable/ca_baseline_mood_48"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconSize="38dp"
            app:iconTint="@color/rosa"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />
    </LinearLayout>
</LinearLayout>